--- a/.github/workflows/yuh-runner.yml
+++ b/.github/workflows/yuh-runner.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - main
 
-  schedule:
-    - cron: '*/5 * * * *'
+  # schedule:
+    # - cron: '*/5 * * * *'
 
 jobs:
   tests:
